--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,10 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.1",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "express-session": "1.17.3",
+    "passport": "^0.6.0",
+    "passport-facebook": "3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
