--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,13 @@
     "dotenv": "^16.0.3",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
+    "express-session": "1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.1",
-    "sequelize": "^6.28.0",
-    "express-session": "1.17.3",
+    "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
-    "passport-facebook": "3.0.0"
+    "passport-facebook": "3.0.0",
+    "sequelize": "^6.28.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
