--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,27 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/compatible": "^5.1.1",
+    "@ant-design/pro-layout": "^7.14.3",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.2",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.3",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "antd": "^5.2.2",
+    "async-mutex": "^0.4.0",
+    "axios": "^1.2.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.2",
-
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
     "redux-deep-persist": "^1.0.7",
     "redux-persist": "^6.0.0",
-    "react-icons": "^4.7.1",
-    "antd": "^5.2.2",
-    "async-mutex": "^0.4.0",
-    "axios": "^1.2.1",
-    "nextjs-progressbar": "^0.0.16",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@reduxjs/toolkit": "^1.9.1"
+    "styled-components": "^5.3.11",
+    "typescript": "5.0.2"
   }
 }
