Update viewdetail post, edit post, delete post

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@ant-design/compatible": "^5.1.1",
     "@ant-design/pro-layout": "^7.14.3",
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.2",
+    "@headlessui/react": "^1.7.15",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.3",
+    "@mui/material": "^5.13.5",
     "@mui/styled-engine-sc": "^5.12.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.15.3",
@@ -24,13 +25,16 @@
     "antd": "^5.2.2",
     "async-mutex": "^0.4.0",
     "axios": "^1.2.1",
+    "bootstrap": "^5.3.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
     "redux-deep-persist": "^1.0.7",
